Better legacy version support.